fixed spacing in nav bar

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 
 ul.nav{
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
 }
 .title-column{
   position: absolute;
